--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,17 +21,20 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  equatable: ^2.0.3
   flutter:
     sdk: flutter
-
+  json_annotation: ^4.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
+  build_runner: ^2.1.2
   flutter_test:
     sdk: flutter
+  json_serializable: ^4.1.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
