--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   equatable: ^2.0.3
   flutter:
     sdk: flutter
+  http: ^0.13.3
   json_annotation: ^4.0.1
 
   # The following adds the Cupertino Icons font to your application.
