--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.13.3
+  injectable: ^1.5.0
   json_annotation: ^4.0.1
 
   # The following adds the Cupertino Icons font to your application.
