--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,9 +21,11 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  bloc: ^7.1.0
   equatable: ^2.0.3
   flutter:
     sdk: flutter
+  flutter_bloc: ^7.2.0
   http: ^0.13.3
   injectable: ^1.5.0
   json_annotation: ^4.0.1
@@ -33,6 +35,7 @@ dependencies:
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
+  bloc_test: ^8.1.0
   build_runner: ^2.1.2
   flutter_test:
     sdk: flutter
