--- a/.gitignore
+++ b/.gitignore
@@ -22,10 +22,12 @@
 **/doc/api/
 .dart_tool/
 .flutter-plugins
+/.flutter-plugins-dependencies
 .packages
 .pub-cache/
 .pub/
 /build/
+/coverage/
 
 # Android related
 **/android/**/gradle-wrapper.jar
@@ -59,6 +61,7 @@
 **/ios/Flutter/app.flx
 **/ios/Flutter/app.zip
 **/ios/Flutter/flutter_assets/
+**/ios/Flutter/flutter_export_environment.sh
 **/ios/ServiceDefinitions.json
 **/ios/Runner/GeneratedPluginRegistrant.*
 
@@ -68,3 +71,16 @@
 !**/ios/**/default.pbxuser
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
+
+# Unit testing coverage
+/**/coverage/lcov.info
+
+#generated files
+/pubspec.lock
+/lib/**/*.g.dart
+/lib/injection.config.dart
+lib/generated_plugin_registrant.dart
+/ios/Flutter/Flutter.podspec
+
+# environment variables
+#*.env
