--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,25 +21,26 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
-  bloc: ^7.1.0
+  bloc: ^8.0.3
   equatable: ^2.0.3
   flutter:
     sdk: flutter
-  flutter_bloc: ^7.2.0
-  http: ^0.13.3
-  injectable: ^1.5.0
-  json_annotation: ^4.0.1
+  flutter_bloc: ^8.0.1
+  http: ^0.13.4
+  injectable: ^1.5.3
+  json_annotation: ^4.6.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.5
 
 dev_dependencies:
-  bloc_test: ^8.1.0
-  build_runner: ^2.1.2
+  bloc_test: ^9.0.3
+  build_runner: ^2.2.0
+  flutter_lints: ^2.0.1
   flutter_test:
     sdk: flutter
-  json_serializable: ^4.1.4
+  json_serializable: ^6.3.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
