--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -34,7 +34,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.lod_prize_tracker"
+        applicationId "com.lod_prize_tracker"
         minSdkVersion 25
         targetSdkVersion 33
         versionCode flutterVersionCode.toInteger()
