--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.lod_prize_tracker">
+    package="com.lod_prize_tracker">
    <uses-permission android:name="android.permission.INTERNET"/>
    <application
         android:label="@string/app_name"
