--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -39,12 +39,12 @@ workflows:
         EOF
       - name: Set up keychain to be used for code signing using Codemagic CLI 'keychain' command
         script: keychain initialize
-      - name: Fetch signing files
-        script: |
-          # You can allow creating resources if existing are not found with `--create` flag
-          app-store-connect fetch-signing-files $BUNDLE_ID \
-            --type IOS_APP_DEVELOPMENT \
-            --create
+#      - name: Fetch signing files
+#        script: |
+#          # You can allow creating resources if existing are not found with `--create` flag
+#          app-store-connect fetch-signing-files $BUNDLE_ID \
+#            --type IOS_APP_DEVELOPMENT \
+#            --create
       - name: Set up signing certificate
         script: keychain add-certificates
       - name: Set up code signing settings on Xcode project
@@ -112,12 +112,12 @@ workflows:
         EOF
       - name: Set up keychain to be used for code signing using Codemagic CLI 'keychain' command
         script: keychain initialize
-      - name: Fetch signing files
-        script: |
-          # You can allow creating resources if existing are not found with `--create` flag
-          app-store-connect fetch-signing-files $BUNDLE_ID \
-            --type IOS_APP_DEVELOPMENT \
-            --create
+#      - name: Fetch signing files
+#        script: |
+#          # You can allow creating resources if existing are not found with `--create` flag
+#          app-store-connect fetch-signing-files $BUNDLE_ID \
+#            --type IOS_APP_DEVELOPMENT \
+#            --create
       - name: Set up signing certificate
         script: keychain add-certificates
       - name: Set up code signing settings on Xcode project
@@ -185,12 +185,12 @@ workflows:
         EOF
       - name: Set up keychain to be used for code signing using Codemagic CLI 'keychain' command
         script: keychain initialize
-      - name: Fetch signing files
-        script: |
-          # You can allow creating resources if existing are not found with `--create` flag
-          app-store-connect fetch-signing-files $BUNDLE_ID \
-            --type IOS_APP_STORE \
-            --create
+#      - name: Fetch signing files
+#        script: |
+#          # You can allow creating resources if existing are not found with `--create` flag
+#          app-store-connect fetch-signing-files $BUNDLE_ID \
+#            --type IOS_APP_STORE \
+#            --create
       - name: Set up signing certificate
         script: keychain add-certificates
       - name: Set up code signing settings on Xcode project
