--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,8 +44,8 @@ dev_dependencies:
   json_serializable: ^6.3.1
 
 flutter_icons:
-  image_path_android: "assets/lod_logo.png"
-  image_path_ios: "assets/lod_logo.png"
+  image_path_android: "assets/android/lod_icon.png"
+  image_path_ios: "assets/ios/lod_icon.png"
   android: true
   ios: true
   remove_alpha_ios: true
