--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,27 +21,28 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
-  bloc: ^8.0.3
-  equatable: ^2.0.3
+  bloc: ^8.1.2
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
-  flutter_bloc: ^8.0.1
-  http: ^0.13.4
-  injectable: ^1.5.3
-  json_annotation: ^4.6.0
+  flutter_bloc: ^8.1.3
+  http: ^1.1.0
+  injectable: ^2.3.0
+  intl: ^0.18.1
+  json_annotation: ^4.8.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.5
+  cupertino_icons: ^1.0.6
 
 dev_dependencies:
-  bloc_test: ^9.0.3
-  build_runner: ^2.2.0
-  flutter_launcher_icons: ^0.10.0
-  flutter_lints: ^2.0.1
+  bloc_test: ^9.1.4
+  build_runner: ^2.4.6
+  flutter_launcher_icons: ^0.13.1
+  flutter_lints: ^2.0.3
   flutter_test:
     sdk: flutter
-  json_serializable: ^6.3.1
+  json_serializable: ^6.7.1
 
 flutter_icons:
   image_path_android: "assets/android/lod_icon.png"
